2023-12-06

        * Version 2.1.0 released
        ========================

        Fix solidangle computation in GSkyRegionRectangle (#4461)
        Replace distutils by setuptools for Python setup (#4223)
        Add GCOMHkd and GCOMHkds classes (#4209)
        Add COMPTEL DRW support to GCOMObservation and GCOMDris (#4209)
        Add GSkyMap comparison operators (#4209)
        Add GIntegral::adaptive_gauss_kronrod() method (#4204)
        Add optional unit parameter to GApplication::log_value() methods (#4202)
        Fix segfault on saving empty GModelSpectralTable (#4198)
        Implement response vector cache storage in FITS file (#4159)
        Add GCOMObservation::npred() method
        Add optional energy scaling in GModelSpectralTable class (#4069)
        Add GNdarray::index() method (#4069)


2022-06-06

        * Version 2.0.0 released
        ========================

        Add gammalib::getenv() function (#4063)
        Add GEbounds::remove() method (#4062)
        Add ASTRI and FACT as supported instrument type for the CTA module (#4058)
        Fix bug in GGti::insert() and GGti::merge() methods (#4030)
        By default, do not allow log-likelihood decrease in LM optimiser
        Support Galactic coordinates in spatial models (#3988)
        Correctly return UTC times before 1972 (#3974)
        Implement CGRO clock correction (#3973)
        Add support for COMPTEL pulsar analysis (#3973)
        Add GCOMObservation::tim() and GCOMObservation::oads() setter methods
        Add GModelSpatialRadialGeneralGauss and 
          GModelSpatialEllipticalGeneralGauss classes (#3924)
        Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
          methods
        Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
          GCOMSelection::use_d2() methods (#3917)
        Rename GCOMModelDRBFitting class to GCOMModelDRBPhibarNodes (#3914)
        Add GCOMModelDRBPhibarBins class (#3913)