@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-* Version: 2.1.0.dev (6 December 2023)
+* Version: 2.1.0.dev (12 December 2023)
 
 [![Build Status](https://cta-jenkins.irap.omp.eu/buildStatus/icon?job=gammalib-integrate-os)](https://cta-jenkins.irap.omp.eu/job/gammalib-integrate-os/)
 
