@@ -1,7 +1,7 @@
 /***************************************************************************
  *          GModelSpatial.cpp - Abstract spatial model base class          *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2009-2021 by Juergen Knoedlseder                         *
+ *  copyright (C) 2009-2023 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -318,28 +318,27 @@ void GModelSpatial::autoscale(void)
 
 
 /***********************************************************************//**
- * @brief Returns model flux integrated in circular sky region
+ * @brief Returns model flux within sky region
  *
  * @param[in] region Sky region.
  * @param[in] srcEng Energy.
  * @param[in] srcTime Time.
  * @return Flux (adimensional or ph/cm2/s).
  *
- * @exception GException::feature_not_implemented
- *            Regions are not circular.
- *
  * Computes
  *
  * \f[
- *    \int_{\rho_{\rm min}}^{\rho_{\rm max}}  \sin \rho \times
- *                     \int_{\omega} M(\rho, \omega | E, t) d\omega d\rho
+ *    \int_{\rho_{\rm min}}^{\rho_{\rm max}} \sin \rho \times
+ *    \int_{\omega} M(\rho, \omega | E, t) d\omega d\rho
  * \f]
  *
  * where
  * \f$M(\rho, \omega | E, t)\f$ is the spatial model,
- * \f$\rho\f$ is the distance from the region centre, and
- * \f$\omega\f$ is the position angle with respect to the connecting line
- * between the region centre and the direction on the sky.
+ * \f$\rho\f$ is the distance from the model centre, and
+ * \f$\omega\f$ is the azimuth angle around the model centre.
+ *
+ * The integration is performed over the circular region that bounds the
+ * spatial model.
  ***************************************************************************/
 double GModelSpatial::flux(const GSkyRegion& region,
                            const GEnergy&    srcEng,
@@ -348,61 +347,23 @@ double GModelSpatial::flux(const GSkyRegion& region,
     // Initialise flux
     double flux = 0.0;
 
+    // Make sure that m_region is set
+    set_region();
+
     // Continue only if region overlaps with model
-    const GSkyRegion* model_reg = this->region();
-    if (model_reg->overlaps(region)) {
+    if (m_region.overlaps(region)) {
 
-        // Throw an exception if region is not a sky circle
-        const GSkyRegionCircle* reg_circle = dynamic_cast<const GSkyRegionCircle*>(&region);
-        if (reg_circle == NULL) {
-            std::string msg = "Flux can only be computed for a circular "
-                              "region.";
-            throw GException::feature_not_implemented(G_FLUX,msg);
-        }
-
-        // Throw an exception if model region is not a sky circle
-        const GSkyRegionCircle* model_circle = dynamic_cast<const GSkyRegionCircle*>(model_reg);
-        if (model_circle == NULL) {
-            std::string msg = "Flux can only be computed for spatial model "
-                              "with region defined as circle.";
-            throw GException::feature_not_implemented(G_FLUX,msg);
-        }
-
-        // Model centre and radius in radians
-        GSkyDir model_centre = model_circle->centre();
-        double  model_radius = model_circle->radius() * gammalib::deg2rad;
-
-        // Distance between region and model centres in radians
-        double distance = model_centre.dist(reg_circle->centre());
-
-        // Take the distance between centers minus radius of model region as
-        // the minimum radial integration boundary (in radians)
-        double rho_min = distance - model_radius;
-
-        // Make sure that rho_min does not become negative
-        if (rho_min < 0.0) {
-            rho_min = 0.0;
-        }
-
-        // Take the region radius as the maximum radial integration boundary
-        // (in radians)
-        double rho_max = reg_circle->radius() * gammalib::deg2rad;
-
-        // Pre-compute some quantities for arclength
-        double cosdist   = std::cos(distance);
-        double sindist   = std::sin(distance);
-        double cosmodrad = std::cos(model_radius);
+        // Retrieve model centre and radial integration boundaries in radians
+        GSkyDir centre  = m_region.centre();
+        double  rho_min = 0.0;
+        double  rho_max = m_region.radius() * gammalib::deg2rad;
 
         // Setup integration kernel
         GModelSpatial::circle_int_kern_rho integrand(this,
-                                                     reg_circle,
+                                                     region,
+                                                     centre,
                                                      srcEng,
-                                                     srcTime,
-                                                     distance,
-                                                     cosdist,
-                                                     sindist,
-                                                     model_radius,
-                                                     cosmodrad);
+                                                     srcTime);
         GIntegral integral(&integrand);
 
         // Suppress integration warnings
@@ -467,9 +428,9 @@ void GModelSpatial::free_members(void)
 
 
 /***********************************************************************//**
- * @brief Kernel for circular sky region radial integration
+ * @brief Kernel for spatial model radial integration
  *
- * @param[in] rho Radial distance from region centre (radians).
+ * @param[in] rho Radial distance from model centre (radians).
  * @return Integration kernel defined as
  *
  * \f[
@@ -485,9 +446,8 @@ void GModelSpatial::free_members(void)
  *
  * where
  * \f$M(\rho, \omega | E, t)\f$ is the spatial model,
- * \f$\rho\f$ is the distance from the region centre, and
- * \f$\omega\f$ is the position angle with respect to the connecting line
- * between the region centre and the direction on the sky.
+ * \f$\rho\f$ is the distance from the model centre, and
+ * \f$\omega\f$ is the azimuth angle around the model centre.
  ***************************************************************************/
 double GModelSpatial::circle_int_kern_rho::eval(const double& rho)
 {
@@ -497,46 +457,26 @@ double GModelSpatial::circle_int_kern_rho::eval(const double& rho)
     // Continue only if rho is positive
     if (rho > 0.0) {
 
-        // Compute half length of the arc (in radians) from a circle with
-        // radius rho that intersects with model circle
-        double domega = 0.5 * gammalib::roi_arclength(rho,
-      						                          m_dist,
-      						                          m_cosdist,
-      						                          m_sindist,
-      						                          m_modrad,
-      						                          m_cosmodrad);
+        // Set omega integration range
+        const double omega_min = 0.0;
+        const double omega_max = gammalib::twopi;
 
-        // Continue only if arc length is positive
-        if (domega > 0.0) {
+        // Setup integration kernel for azimuth integration
+        GModelSpatial::circle_int_kern_omega integrand(m_model,
+                                                       m_region,
+                                                       m_centre,
+                                                       rho,
+                                                       m_srcEng,
+                                                       m_srcTime);
 
-            // Reduce rho by an infinite amount to avoid rounding errors
-            // at the boundary of a sharp edged model
-            double rho_kludge = rho - g_kludge_radius;
-            if (rho_kludge < 0.0) {
-                rho_kludge = 0.0;
-            }
+        // Setup integrator
+        GIntegral integral(&integrand);
 
-            // Compute omega integration range
-            double omega_min = -domega;
-            double omega_max = +domega;
+        // Compute sine term for radial integration
+        double sin_rho = std::sin(rho);
 
-            // Setup integration kernel for azimuth integration
-            GModelSpatial::circle_int_kern_omega integrand(m_model,
-                                                           m_reg,
-                                                           rho_kludge,
-                                                           m_srcEng,
-                                                           m_srcTime);
-
-            // Setup integrator
-            GIntegral integral(&integrand);
-
-            // Compute sine term for radial integration
-            double sin_rho = std::sin(rho);
-
-            // Integrate over omega
-            flux = integral.romberg(omega_min, omega_max) * sin_rho;
-
-        } //endif: domega was positive
+        // Integrate over omega
+        flux = integral.romberg(omega_min, omega_max) * sin_rho;
 
     } // endif: rho was positive
 
@@ -546,7 +486,7 @@ double GModelSpatial::circle_int_kern_rho::eval(const double& rho)
 
 
 /***********************************************************************//**
- * @brief Kernel for circular sky region azimuth angle integration
+ * @brief Kernel for spatial model azimuth angle integration
  *
  * @param[in] omega Azimuth angle (radians).
  * @return Integration kernel defined as
@@ -557,23 +497,29 @@ double GModelSpatial::circle_int_kern_rho::eval(const double& rho)
  *
  * where
  * \f$M(\omega | \rho)\f$ is the spatial model,
- * \f$\rho\f$ is the distance from the region centre, and
- * \f$\omega\f$ is the position angle with respect to the connecting line
- * between the region centre and the direction on the sky.
+ * \f$\rho\f$ is the distance from the model centre, and
+ * \f$\omega\f$ is the azimuth angle around the model centre.
  ***************************************************************************/
 double GModelSpatial::circle_int_kern_omega::eval(const double& omega)
 {
-    // Compute sky direction corresponding to given rho, omega
-    GSkyDir dir = GSkyDir(m_reg->centre());
+    // Initialise flux
+    double flux = 0.0;
 
-    // Rotate to obtain requested sky direction
+    // Compute sky direction corresponding to given rho, omega by rotating
+    // model centre
+    GSkyDir dir = m_centre;
     dir.rotate(omega, m_rho);
 
-    // Set photon for this sky direction
-    GPhoton photon = GPhoton(dir, m_srcEng, m_srcTime);
+    // Evaluate model if sky direction is contained in region
+    if (m_region.contains(dir)) {
 
-    // Evaluate model for this sky direction
-    double flux = m_model->eval(photon);
+        // Set photon for this sky direction
+        GPhoton photon = GPhoton(dir, m_srcEng, m_srcTime);
+
+        // Evaluate model for this sky direction
+        flux = m_model->eval(photon);
+
+    } // endif: sky direction was contained in region
 
     // Return
     return flux;
